[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["sandeep navale <sandeepnl@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
unittest2 = "^1.1.0"
pandas = "^1.3.3"
pip = "^22.0.3"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
